--- a/config.toml
+++ b/config.toml
@@ -11,8 +11,15 @@ paginate = 10
   ShowPostNavLinks = true
   ShowBreadCrumbs = true
   ShowToc = true
+  socialIcons = true
   disableHLJS = true
   comments = false
+
+[[params.social]]
+  name = "LinkedIn"
+  url = "https://www.linkedin.com/in/linwang4ds/"
+  weight = 1
+  icon = "linkedin"
 
 [menu]
   [[menu.main]]
@@ -28,6 +35,10 @@ paginate = 10
     url = "/search/"
     weight = 3
   [[menu.main]]
-    name = "Tags"
-    url = "/tags/"
+    name = "About"
+    url = "/About/"
     weight = 4
+  [[menu.main]]
+    name = ""
+    url = "https://www.linkedin.com/in/linwang4ds/"
+    post = '<i class="fab fa-linkedin"></i>'
