--- a/config.toml
+++ b/config.toml
@@ -20,6 +20,10 @@ paginate = 10
     url = "/posts/"
     weight = 1
   [[menu.main]]
+    name = "Codes"
+    url = "/codes/"
+    weight = 2
+  [[menu.main]]
     name = "About"
     url = "/About/"
     weight = 4
