--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,9 @@ baseURL = "https://entropy-warrior.github.io/"
 languageCode = "en-us"
 title = "Perspective Tensor"
 theme = "PaperMod"
-paginate = 10
+
+[pagination]
+  pagerSize = 10
 
 [params]
   author = "Lin Wang"
