Update Hugo to v0.147.9 and fix theme compatibility
- Upgraded Hugo from v0.140.0 to v0.147.9 to resolve deprecation issues
- Fixed PaperMod theme partial paths (removed redundant 'partials/' prefix)
- Removed deprecated site.Social fallback code from theme templates
- Updated config.toml: migrated paginate to pagination.pagerSize
- Added social taxonomy configuration
- Successfully built site with new complexodynamics post

--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,10 @@ theme = "PaperMod"
 [pagination]
   pagerSize = 10
 
+[taxonomies]
+  # Adding social taxonomy to fix Hugo 0.140 deprecation error
+  social = "social"
+
 [params]
   author = "Lin Wang"
   description = "Documenting my evolving perspectives on a lifelong journey of learning."
@@ -15,6 +19,9 @@ theme = "PaperMod"
   ShowToc = true
   disableHLJS = true
   comments = false
+  
+  # Dummy social section to prevent Hugo error - theme expects this
+  [params.social]
 
 [menu]
   [[menu.main]]
