--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/PaperMod"]
-	path = themes/PaperMod
+	path = legacy/themes/PaperMod
 	url = https://github.com/Entropy-Warrior/hugo-PaperMod
