--- a/perspective-tensor/package.json
+++ b/perspective-tensor/package.json
@@ -11,12 +11,20 @@
   "dependencies": {
     "@astrojs/mdx": "^4.3.3",
     "@astrojs/react": "^4.3.0",
+    "@astrojs/rss": "^4.0.12",
+    "@react-three/drei": "^10.6.1",
+    "@react-three/fiber": "^9.3.0",
     "@tailwindcss/vite": "^4.1.11",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "astro": "^5.12.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "three": "^0.179.1"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/node": "^20.14.8"
   }
 }
