--- a/perspective-tensor/package.json
+++ b/perspective-tensor/package.json
@@ -5,9 +5,13 @@
   "scripts": {
     "dev": "pkill -f 'astro dev' || true && astro dev",
     "dev:fresh": "pkill -f 'astro dev' || true && astro dev",
-    "build": "astro build",
+    "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "check": "astro check",
+    "typecheck": "astro check && tsc --noEmit",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx,.astro",
+    "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx,.astro --fix"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
@@ -30,6 +34,11 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^20.14.8"
+    "@types/node": "^20.14.8",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@typescript-eslint/parser": "^8.39.0",
+    "eslint": "^9.33.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "prettier": "^3.6.2"
   }
 }
